添加联合身份认证，目前实现了gitee的OAuth2登录，GitHub OAuth2登录待完成

--- a/authorization-server/src/main/resources/templates/login.html
+++ b/authorization-server/src/main/resources/templates/login.html
@@ -67,12 +67,13 @@ Invalid username or password.
             <a id="changeLoginType" href="javascript:showSmsCaptchaPage()">短信验证登录</a>
         </div>
         <button class="btn btn-lg btn-primary btn-block" type="submit">登&nbsp;&nbsp;&nbsp;&nbsp;录</button>
-        <!--<a class="btn btn-light btn-block bg-white" href="/oauth2/authorization/gitee" role="link" style="text-transform: none;">
-Sign in with Gitee
-</a>-->
-        <!--        <div class="text-placeholder">-->
-        <!--            第三方登录-->
-        <!--        </div>-->
+        <div class="text-placeholder">
+            第三方登录
+        </div>
+        <a class="btn btn-light btn-block bg-white" href="/oauth2/authorization/gitee" role="link"
+           style="text-transform: none;">
+            Sign in with Gitee
+        </a>
         <!--        <div>-->
         <!--            <a class="btn btn-light btn-block bg-white" href="/oauth2/authorization/github-idp" role="link"-->
         <!--               style="text-transform: none;">-->
