添加GitHub OAuth2登录配置，完成GitHub用户信息映射，优化代码，优化登录页面

--- a/authorization-server/src/main/resources/static/assets/css/style.css
+++ b/authorization-server/src/main/resources/static/assets/css/style.css
@@ -189,6 +189,16 @@ body {
     padding-left: 10px;
 }
 
+/* 三方登录图标 */
+.third-box {
+    text-align: center;
+    margin-bottom: 0 !important;
+}
+.third-box img {
+    position: relative;
+    top: 3px;
+}
+
 @keyframes shake {
     0% {
         transform: translate(-50%, -50%);
