--- a/authorization-server/src/main/resources/templates/login.html
+++ b/authorization-server/src/main/resources/templates/login.html
@@ -45,16 +45,15 @@ Invalid username or password.
                 </span>
         </div>
         <div>
-            <input type="text" id="username" name="username" class="form-control" placeholder="手机 / 邮箱"
-                   autofocus onblur="leave()"/>
+            <input type="text" id="username" name="username" class="form-control" placeholder="手机 / 邮箱" autofocus
+                   onblur="leave()"/>
         </div>
         <div id="passContainer">
             <input type="password" id="password" name="password" class="form-control" placeholder="请输入密码"
                    onblur="leave()"/>
         </div>
         <div class="code-container" id="codeContainer">
-            <input type="text" id="code" name="code" class="form-control" placeholder="请输入验证码"
-                   onblur="leave()"/>
+            <input type="text" id="code" name="code" class="form-control" placeholder="请输入验证码" onblur="leave()"/>
             <img src="" id="code-image" onclick="getVerifyCode()"/>
         </div>
         <div style="display: none; margin-bottom: 0" class="code-container" id="smsContainer">
@@ -70,18 +69,32 @@ Invalid username or password.
         <div class="text-placeholder">
             第三方登录
         </div>
-        <a class="btn btn-light btn-block bg-white" href="/oauth2/authorization/gitee" role="link"
-           style="text-transform: none;">
+        <!-- <a class="btn btn-light btn-block bg-white" href="/oauth2/authorization/gitee" role="link"
+            style="text-transform: none;">
             Sign in with Gitee
         </a>
-        <!--        <div>-->
-        <!--            <a class="btn btn-light btn-block bg-white" href="/oauth2/authorization/github-idp" role="link"-->
-        <!--               style="text-transform: none;">-->
-        <!--                <img width="24" style="margin-right: 5px;" alt="Sign in with GitHub"-->
-        <!--                     src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" />-->
-        <!--                Github-->
-        <!--            </a>-->
-        <!--        </div>-->
+        <div>
+            <a class="btn btn-light bg-white" href="/oauth2/authorization/github" role="link"
+                style="text-transform: none;">
+                <img width="24" style="margin-right: 5px;" alt="Sign in with GitHub"
+                    src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" />
+                Github
+            </a>
+        </div> -->
+        <div class="third-box">
+            <a href="/oauth2/authorization/gitee" title="Gitee登录">
+                <svg width="32" height="32" xmlns="http://www.w3.org/2000/svg" name="zi_tmGitee"
+                     viewBox="0 0 2000 2000">
+                    <path fill="red"
+                          d="M898 1992q183 0 344-69.5t283-191.5q122-122 191.5-283t69.5-344q0-183-69.5-344T1525 477q-122-122-283-191.5T898 216q-184 0-345 69.5T270 477Q148 599 78.5 760T9 1104q0 183 69.5 344T270 1731q122 122 283 191.5t345 69.5zm199-400H448q-17 0-30.5-14t-13.5-30V932q0-89 43.5-163.5T565 649q74-45 166-45h616q17 0 30.5 14t13.5 31v111q0 16-13.5 30t-30.5 14H731q-54 0-93.5 39.5T598 937v422q0 17 14 30.5t30 13.5h416q55 0 94.5-39.5t39.5-93.5v-22q0-17-14-30.5t-31-13.5H842q-17 0-30.5-14t-13.5-31v-111q0-16 13.5-30t30.5-14h505q17 0 30.5 14t13.5 30v250q0 121-86.5 207.5T1097 1592z"/>
+                </svg>
+            </a>
+
+            <a href="/oauth2/authorization/github" title="GitHub登录">
+                <img width="36" style="margin-right: 5px;" alt="Sign in with GitHub"
+                     src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"/>
+            </a>
+        </div>
     </form>
 </div>
 </body>
