联合身份认证添加微信登录

--- a/authorization-server/src/main/resources/templates/login.html
+++ b/authorization-server/src/main/resources/templates/login.html
@@ -94,6 +94,11 @@ Invalid username or password.
                 <img width="36" style="margin-right: 5px;" alt="Sign in with GitHub"
                      src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"/>
             </a>
+
+            <a href="/oauth2/authorization/wechat" title="GitHub登录">
+                <img width="28" style="margin-right: 5px; position: static;" alt="Sign in with GitHub"
+                     src="./assets/img/wechat_login.png"/>
+            </a>
         </div>
     </form>
 </div>
