feat：感谢梦一场(w)的打赏，非常感谢！添加客户端使用private_key_jwt的客户端验证方式进行认证的示例

--- a/authorization-server/src/main/resources/templates/login.html
+++ b/authorization-server/src/main/resources/templates/login.html
@@ -169,7 +169,9 @@ Invalid username or password.
                 if (r) {
                     let result = JSON.parse(r);
                     document.getElementById('captchaId').value = result.data.captchaId
-                    document.getElementById('code-image').src = result.data.imageData
+                    if (result.data.imageData) {
+                        document.getElementById('code-image').src = result.data.imageData
+                    }
                 }
             })
             .catch(error => console.log('error', error));
