feat：添加默认账号密码，cors过滤器添加演示域名

--- a/authorization-server/src/main/resources/templates/login.html
+++ b/authorization-server/src/main/resources/templates/login.html
@@ -46,11 +46,11 @@ Invalid username or password.
         </div>
         <div>
             <input type="text" id="username" name="username" class="form-control" placeholder="手机 / 邮箱" autofocus
-                   onblur="leave()"/>
+                   onblur="leave()" value="admin"/>
         </div>
         <div id="passContainer">
             <input type="password" id="password" name="password" class="form-control" placeholder="请输入密码"
-                   onblur="leave()"/>
+                   onblur="leave()" value="123456"/>
         </div>
         <div class="code-container" id="codeContainer">
             <input type="text" id="code" name="code" class="form-control" placeholder="请输入验证码" onblur="leave()"/>
